--- a/docs/api/orders/order-refunds.api.mdx
+++ b/docs/api/orders/order-refunds.api.mdx
@@ -5,7 +5,7 @@ description: "Shows refunds information about an existing order and its products
 sidebar_label: "Order Refunds"
 hide_title: true
 hide_table_of_contents: true
-api: {"tags":["Order Refunds"],"parameters":[{"in":"path","name":"id","required":true,"description":"Public ID of the order.","example":"cldbvy7gt0006hpzo9nyw72ks","schema":{"type":"string"}}],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","required":["id","refunds"],"properties":{"id":{"type":"string","description":"Public ID of the order.","example":"cldbvy7gt0006hpzo9nyw72ks"},"external_id":{"type":"string","description":"ID of the order provided to Bonsai by the party who placed the order.","example":"51cf91c1-da4a-42c4-81d3-3ec3e3268655"},"refunds":{"type":"array","items":{"type":"object","required":["products","refund_reason","refunded_amount"],"properties":{"products":{"type":"array","items":{"type":"object","required":["product_id","variant_id","quantity"],"properties":{"product_id":{"type":"string","description":"Product id","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234 - M - Black"},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant in the cart","example":2}}}},"refund_reason":{"type":"string","enum":["item unavailable","customer canceled","customer returned","reimbursement","fraudulent","duplicate","Historical refund. Reason missing"]},"refunded_amount":{"type":"number","format":"float","minimum":1,"description":"Total amount refunded across the subtotal, shipping, and taxes","example":100}}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","detail"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":404},"code":{"type":"string","description":"Unique code for specific error.","example":"CUSTOMER_ORDER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Customer order has not been found"},"detail":{"type":"object","properties":{"customer_order_id":{"type":"string","example":"cldbvy7gt0006hpzo9nyw72ks"}},"description":"Useful details related to the error"}}}}}}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Shows refunds information about an existing order and its products. This endpoint\n        allows API users to get current information on the fulfillment status of their orders.","method":"get","path":"/v2/{id}/refunds","servers":[{"url":"https://api.shopbonsai.ca/orders"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Orders API","description":"APIs used for interacting with orders.","version":"2.1.1","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Order Refunds","description":{"content":"Shows refunds information about an existing order and its products. This endpoint\n        allows API users to get current information on the fulfillment status of their orders.","type":"text/plain"},"url":{"path":["v2",":id","refunds"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Public ID of the order.","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
+api: {"tags":["Order Refunds"],"parameters":[{"in":"path","name":"id","required":true,"description":"Public ID of the order.","example":"cldbvy7gt0006hpzo9nyw72ks","schema":{"type":"string"}}],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","required":["id","refunds"],"properties":{"id":{"type":"string","description":"Public ID of the order.","example":"cldbvy7gt0006hpzo9nyw72ks"},"external_id":{"type":"string","description":"ID of the order provided to Bonsai by the party who placed the order.","example":"51cf91c1-da4a-42c4-81d3-3ec3e3268655"},"refunds":{"type":"array","items":{"type":"object","required":["products","refund_reason","refunded_amount"],"properties":{"products":{"type":"array","items":{"type":"object","required":["product_id","variant_id","quantity"],"properties":{"product_id":{"type":"string","description":"Product id","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234 - M - Black"},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant in the cart","example":2}}}},"refund_reason":{"type":"string","enum":["item unavailable","customer canceled","customer returned","reimbursement","fraudulent","duplicate","Historical refund. Reason missing"]},"refunded_amount":{"type":"number","format":"float","minimum":1,"description":"Total amount refunded across the subtotal, shipping, and taxes","example":100}}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","detail"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":401},"code":{"type":"string","description":"Unique code for specific error.","example":"AUTHENTICATION_FAILED"},"title":{"type":"string","description":"Short description what the error entails.","example":"Authentication failed"},"detail":{"type":"object","properties":{"authentication_expected":{"type":"string","example":"Authorization header"}},"description":"Useful details related to the error"}}}}}}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","detail"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":404},"code":{"type":"string","description":"Unique code for specific error.","example":"CUSTOMER_ORDER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Customer order has not been found"},"detail":{"type":"object","properties":{"customer_order_id":{"type":"string","example":"cldbvy7gt0006hpzo9nyw72ks"}},"description":"Useful details related to the error"}}}}}}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Shows refunds information about an existing order and its products. This endpoint\n        allows API users to get current information on the fulfillment status of their orders.","method":"get","path":"/v2/{id}/refunds","servers":[{"url":"https://api.shopbonsai.ca/orders"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Orders API","description":"APIs used for interacting with orders.","version":"2.1.1","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Order Refunds","description":{"content":"Shows refunds information about an existing order and its products. This endpoint\n        allows API users to get current information on the fulfillment status of their orders.","type":"text/plain"},"url":{"path":["v2",":id","refunds"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Public ID of the order.","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
 sidebar_class_name: "get api-method"
 info_path: docs/api/orders/orders-api
 custom_edit_url: null
@@ -39,7 +39,11 @@ Success
 
 401 - Unauthorized
 
-</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 401,\n      \"detail\": \"\",\n      \"title\": \"Authentication information is missing or invalid\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"404"} value={"404"}><div>
+</div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"id"} required={false} deprecated={undefined} schemaDescription={"Unique identifier for error. Can be used for tracing across services."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"status"} required={false} deprecated={undefined} schemaDescription={"HTTP status code."} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"code"} required={false} deprecated={undefined} schemaDescription={"Unique code for specific error."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} deprecated={undefined} schemaDescription={"Short description what the error entails."} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>detail</strong><span style={{"opacity":"0.6"}}> object</span></summary><div style={{"marginLeft":"1rem"}}><div style={{"marginTop":".5rem","marginBottom":".5rem"}}>
+
+Useful details related to the error
+
+</div><SchemaItem collapsible={false} name={"authentication_expected"} required={false} deprecated={undefined} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"id\": \"123e4567-e89b-12d3-a456-426655440000\",\n      \"status\": 401,\n      \"code\": \"AUTHENTICATION_FAILED\",\n      \"title\": \"Authentication failed\",\n      \"detail\": {\n        \"authentication_expected\": \"Authorization header\"\n      }\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem><TabItem label={"404"} value={"404"}><div>
 
 404 - Not found
 
