--- a/docs/api/carts/get-a-cart-by-id.api.mdx
+++ b/docs/api/carts/get-a-cart-by-id.api.mdx
@@ -1,11 +1,11 @@
 ---
 id: get-a-cart-by-id
-title: "Get a cart by ID."
+title: "Get a cart by ID"
 description: "Get a cart by ID."
-sidebar_label: "Get a cart by ID."
+sidebar_label: "Get a cart by ID"
 hide_title: true
 hide_table_of_contents: true
-api: {"tags":["cart"],"parameters":[{"in":"path","name":"id","required":true,"description":"Cart ID","example":"9597879817","schema":{"type":"string"}}],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"type":"object","properties":{"data":{"type":"object","required":["products","id"],"properties":{"products":{"type":"array","items":{"type":"object","required":["id","variantId","quantity"],"properties":{"id":{"type":"string","description":"Product ID.","example":"clad6pg5z00eu012gfz7hfm92"},"variantId":{"type":"string","description":"The ID of the product variant.","example":"M00679529706740"},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant.","example":1}}},"description":"Product identifiers for the cart."},"id":{"type":"string","description":"Unique identifier for the cart","example":"cjzyvxtm207z4rns56tif8job"}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occurred trying to create a new order"}}}}}}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Get a cart by ID.","method":"get","path":"/{id}","servers":[{"url":"https://api.shopbonsai.ca/carts"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Carts API","description":"API for creating, reading, updating, and deleting carts.","version":"0.8.30","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Get a cart by ID.","description":{"content":"Get a cart by ID.","type":"text/plain"},"url":{"path":[":id"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Cart ID","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
+api: {"tags":["cart"],"parameters":[{"in":"path","name":"id","required":true,"description":"Cart ID","example":"9597879817","schema":{"type":"string"}}],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"type":"object","properties":{"data":{"type":"object","required":["products","id"],"properties":{"products":{"type":"array","items":{"type":"object","required":["id","variantId","quantity"],"properties":{"id":{"type":"string","description":"Product ID.","example":"clad6pg5z00eu012gfz7hfm92"},"variantId":{"type":"string","description":"The ID of the product variant.","example":"M00679529706740"},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant.","example":1}}},"description":"Product identifiers for the cart."},"id":{"type":"string","description":"Unique identifier for the cart","example":"cjzyvxtm207z4rns56tif8job"}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occurred trying to create a new order"}}}}}}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":400,"detail":"","title":"Bad input request"}}}},"description":"Provided input is invalid"}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Get a cart by ID.","method":"get","path":"/{id}","servers":[{"url":"https://api.shopbonsai.ca/carts"}],"security":[{"APIKeyHeader":[]}],"securitySchemes":{"APIKeyHeader":{"type":"apiKey","name":"API-Key","in":"header"}},"info":{"title":"Carts API","description":"API for creating, reading, updating, and deleting carts.","version":"0.8.30","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Get a cart by ID","description":{"content":"Get a cart by ID.","type":"text/plain"},"url":{"path":[":id"],"host":["{{baseUrl}}"],"query":[],"variable":[{"disabled":false,"description":{"content":"(Required) Cart ID","type":"text/plain"},"type":"any","value":"","key":"id"}]},"header":[{"key":"Accept","value":"application/json"}],"method":"GET"}}
 sidebar_class_name: "get api-method"
 info_path: docs/api/carts/carts-api
 custom_edit_url: null
@@ -20,7 +20,7 @@ import SchemaTabs from "@theme/SchemaTabs";
 import DiscriminatorTabs from "@theme/DiscriminatorTabs";
 import TabItem from "@theme/TabItem";
 
-## Get a cart by ID.
+## Get a cart by ID
 
 
 
